--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
+    "@rebass/space": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "next": "9.1.4",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "rebass": "^4.0.7"
   }
 }
