--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@rebass/forms": "^4.0.6",
-    "@rebass/grid": "^6.1.0",
-    "@rebass/space": "^4.0.5",
     "isomorphic-unfetch": "^3.0.0",
+    "lazysizes": "^5.2.0-beta1",
     "next": "9.1.4",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "rebass": "^4.0.7"
+    "react-dom": "16.12.0"
   }
 }
