--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "isomorphic-unfetch": "^3.0.0",
     "lazysizes": "^5.2.0-beta1",
     "next": "9.1.4",
+    "next-transpile-modules": "^2.3.1",
     "react": "16.12.0",
+    "react-adaptive-hooks": "0.0.8",
     "react-dom": "16.12.0"
   }
 }
