--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "log-functions": "cd functions && npm run logs"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-css": "1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "lazysizes": "^5.2.0-beta1",
     "next": "9.1.4",
