--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,11 @@
     "lazysizes": "^5.2.0-beta1",
     "next": "9.1.4",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "@zeit/next-css": "1.0.1",
+    "next-transpile-modules": "^2.3.1",
+    "react-adaptive-hooks": "0.0.8",
+    "react-toggle": "^4.1.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
